<resources>
    <string name="app_name">Home Baker App</string>
    <string name="random_text">Some text</string>

    <string name="recipe_object_label">Recipe</string>
    <string name="recipe_image_content_description">Recipe image</string>
    <string name="recipe_name_placeholder">Recipe name: unknown</string>
    <string name="SAVOURY_RECIPE_IMAGE_PLACEHOLDER">SAVOURY_RECIPE_IMAGE_PLACEHOLDER</string>
    <string name="SWEET_RECIPE_IMAGE_PLACEHOLDER">SWEET_RECIPE_IMAGE_PLACEHOLDER</string>
    <string name="action_show_fav_toast">Showing recipes in your favourite list</string>
    <string name="action_hide_fav_toast">Showing all recipes</string>

    <string name="HOMEBAKER_CLOUD_BASE_URL">https://sbs19016-bakerapp-testing-restfull-app.azurewebsites.net/</string>
    <string name="HOMEBAKER_RECIPES_ENDPOINT">recipes</string>
    <string name="HOMEBAKER_RECIPE_ENDPOINT">recipe</string>
    <string name="HOMEBAKER_RECIPE_ENDPOINT_Q_PARAM">id</string>
    <string name="HOMEBAKER_INGREDIENTS_ENDPOINT">ingredients</string>
    <string name="HOMEBAKER_INGREDIENTS_ENDPOINT_Q_PARAM">recipe-id</string>

    <!-- Menu entries -->
    <string name="action_settings">Settings</string>
    <string name="action_show_fav_list">Show favourites</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>

    <!--    ERRORS    -->

    <string name="error_message_generic">Failed to get results. Please try again!</string>
    <string name="query_not_long_enough">Your query should have between 3 and 20 characters</string>
    <string name="no_media">No media content available.</string>

    <!--    Settings options    -->

    <string name="pref_measurement_option_metric">Convert to metric system</string>
    <string name="pref_measurement_option_uscs">Convert to USCS system</string>
    <string name="pref_metric">metric</string>
    <string name="pref_uscs">uscs</string>
    <string name="pref_convert_bool_key">convert_values_bool</string>
    <string name="pref_choose_system_key">choose_measurement_system</string>

    <!--    Activity labels    -->

    <string name="title_step_list">Steps</string>
    <string name="title_step_detail">Step Detail</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="title_settings">Settings</string>

    <!-- Strings used for fragments for navigation (in default template, not used here) -->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!-- Strings used in 'recipe details' activity -->
    <string name="hello_first_fragment">Recipe detail value</string>
    <string name="measurement_conversion">Convert values to fav measurement system</string>
    <string name="ingredients_section_title">Ingredients</string>
    <string name="notes_section_title">Notes</string>
    <string name="generic_details_section_title">General info</string>
    <string name="authors">Authors:</string>
    <string name="servings">Servings:</string>
    <string name="details_to_steps_button">Go to instructions</string>
    <string name="empty_notes">It looks like this recipe may not require any special instruction!</string>
    <string name="empty_servings">Not set</string>
    <string name="empty_authors">Unknown author</string>
    <string name="ingredient_default_text">My ingredient (placeholder)</string>
    <string name="measure_default_text">G 500.0 (placeholder)</string>

    <!-- Strings used in 'recipe details' activity, for the 'recipe edit' fragment -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Steps activity and fragments    -->
    <string name="ARG_ITEM_ID">item_id</string>
    <string name="open_video_on_youtube">Open video on YouTube</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>